# ga-ga3-unit-testing

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  SourceA.cpp  SourceA.hpp  SourceB.hpp
src/SourceA/: CMakeLists.txt  SourceA.hpp
src/SourceB/: CMakeLists.txt  SourceB.cpp  SourceB.hpp
src/SourceC/: CMakeLists.txt  SourceC.cpp  SourceC.hpp
src/SourceD/: CMakeLists.txt  SourceD.cpp  SourceD.hpp
test/: testA.cpp  testB.cpp
test/UnitTest/: CMakeLists.txt
test/UnitTest/mocks/src/SourceB/: SourceB.cpp  SourceB.hpp
test/UnitTest/mocks/src/SourceD/: SourceD.cpp  SourceD.hpp
test/UnitTest/scripts/: GlobUtils.cmake  SubstitutionUtils.cmake  TestUtils.cmake
test/UnitTest/src/: CMakeLists.txt
test/UnitTest/src/SourceA/: CMakeLists.txt  SourceA_Test.cpp
test/UnitTest/src/SourceB/: CMakeLists.txt  SourceB_Test.cpp
test/UnitTest/src/SourceC/: CMakeLists.txt  SourceC_Test.cpp
test/UnitTest/src/SourceD/: CMakeLists.txt
test/mocks/UsingMockB/: SourceBMock.hpp
test/scripts/: Substitution.cmake
test/src/UsingMockB/: CMakeList.txt  testAusingmockB.cpp
